# finite_cell_structural_application

./: CMakeLists.txt  FiniteCellStructuralApplication.py  finite_cell_structural_application.cpp  finite_cell_structural_application.h
custom_conditions/: face_force_with_function.cpp  face_force_with_function.h  ghost_penalty_displacement_gradient_condition.cpp  ghost_penalty_displacement_gradient_condition.h  ghost_penalty_elastic_condition.cpp  ghost_penalty_elastic_condition.h  ghost_penalty_stress_condition.cpp  ghost_penalty_stress_condition.h  immersed_point_force.cpp  immersed_point_force.h  line_force_with_function.cpp  line_force_with_function.h
custom_elements/: extrapolated_constant_stress_kinematic_linear.cpp  extrapolated_constant_stress_kinematic_linear.h  extrapolated_kinematic_linear.cpp  extrapolated_kinematic_linear.h
custom_python/: add_custom_conditions_to_python.cpp  add_custom_conditions_to_python.h  add_custom_utilities_to_python.cpp  add_custom_utilities_to_python.h  finite_cell_structural_python_application.cpp
custom_utilities/: immersed_boundary_load_utility.h
tests/: test_kratos.py
